--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "@nestjs/common": "^7.6.12",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.12",
+    "@nestjs/jwt": "^7.2.0",
     "@nestjs/mongoose": "^7.2.3",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.12",
     "@nestjs/platform-socket.io": "^7.6.12",
     "@nestjs/websockets": "^7.6.12",
     "mongoose": "^5.11.16",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
@@ -41,6 +46,8 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.28",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
     "@types/socket.io": "^2.1.13",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
